--- a/app/components/lookbook/nav/entity/component.html.erb
+++ b/app/components/lookbook/nav/entity/component.html.erb
@@ -2,7 +2,10 @@
   id: id,
   key: "#{id}-entity-#{type}",
   class: "list-none",
+  "x-init": "$nextTick(() => checkActive())",
   "x-show": "!filteredOut",
+  "@navigation:complete.window": "checkActive",
+  # "x-effect": "active = ($refs.link && (window.location.pathname === $refs.link.getAttribute('href')))",
   data: { "entity-type": type.to_s.tr("_","-") },
   cloak: true do %>
   <%= lookbook_tag href.present? ? :a : :button,
