--- a/app/components/lookbook/ui/pages/page_metadata/page_metadata.html.erb
+++ b/app/components/lookbook/ui/pages/page_metadata/page_metadata.html.erb
@@ -28,7 +28,7 @@
         <strong>Page file path</strong>
       <% end %>
       <% row.with_cell do %>
-        <code><%= page.app_file_path %></code>
+        <code><%= path_relative_to_app(page.file_path) %></code>
       <% end %>
     <% end %>
   <% end %>
