--- a/app/components/lookbook/ui/app/header/header.css
+++ b/app/components/lookbook/ui/app/header/header.css
@@ -31,7 +31,7 @@
 
     & + .header-color-scheme-switcher {
       border-left: 1px solid var(--lb-color-content-1-accent);
-      margin-left: var(--lb-spacing-sm);
+      margin-left: var(--lb-spacing-xl);
     }
   }
 
@@ -45,11 +45,6 @@
     padding-block: var(--lb-spacing-xs);
     opacity: 0.8;
     transition: opacity 300ms;
-
-    .icon {
-      width: 15px;
-      /* opacity: 0.7; */
-    }
 
     &:hover {
       opacity: 1;
