Tooltip styling and theme tweaks

--- a/app/components/lookbook/ui/app/color_scheme_switcher/color_scheme_switcher.css
+++ b/app/components/lookbook/ui/app/color_scheme_switcher/color_scheme_switcher.css
@@ -1,4 +1,8 @@
 [data-component="color-scheme-switcher"] {
+  display: block;
+  height: fit-content;
+  line-height: 1;
+
   .switcher-button {
     &,
     &:hover,
