--- a/app/components/lookbook/ui/elements/toolbar/toolbar_button/toolbar_button.html.erb
+++ b/app/components/lookbook/ui/elements/toolbar/toolbar_button/toolbar_button.html.erb
@@ -13,7 +13,7 @@
   },
   class: "toolbar-button"
 ) do %>
-  <div class="button-content" x-ref="content">
+  <div class="toolbar-button-content" x-ref="content">
     <% if content.present? %>
       <%= content %>
     <% else %>
