--- a/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.css
+++ b/app/components/lookbook/ui/app/status_bar/status_bar_item/status_bar_item.css
@@ -1,8 +1,9 @@
 [data-component="status-bar-item"] {
   position: relative;
   height: 100%;
+  padding-inline: var(--lb-spacing-2xs);
 
-  .status-bar-item-summary {
+  .status-bar-item-content {
     height: 100%;
     display: flex;
     align-items: center;
@@ -11,37 +12,35 @@
 
     .icon {
       flex: none;
-      height: 100%;
+      height: 14px;
     }
   }
 
-  &.with-panel .status-bar-item-summary {
+  &.with-panel .status-bar-item-content {
     cursor: pointer;
   }
 
+  &[data-theme="action"] {
+    .status-bar-item-content {
+      color: var(--lb-color-content-2-accent);
+    }
+  }
+
   &[data-theme="positive"] {
-    .status-bar-item-summary .icon {
+    .status-bar-item-content {
       color: var(--lb-color-content-positive);
     }
   }
 
   &[data-theme="error"] {
-    .status-bar-item-summary {
+    .status-bar-item-content {
       color: var(--lb-color-content-negative);
-
-      .icon {
-        color: var(--lb-color-content-negative);
-      }
     }
   }
 
   &[data-theme="warning"] {
-    .status-bar-item-summary {
+    .status-bar-item-content {
       color: var(--lb-color-content-warning);
-
-      .icon {
-        color: var(--lb-color-content-warning);
-      }
     }
   }
 }
